# helpDoc

./: pyproject.toml
botinho/: aimlBotinho.py  bdBotinho.py  docker-compose.yml  main.py  std-startup.xml
botinho/categorias_aiml/: ajuda.aiml  default.aiml  encerramentos.aiml  opcoes.aiml  saudacoes.aiml
botinho/util/: jsonUtil.py  stringUtil.py
tests/: test_botinho.py
